tests/ui/feature-gates/feature-gate-feature-gate.rs
#![forbid(unstable_features)]
#![feature(intrinsics)] //~ ERROR unstable feature

fn main() { }
